<resources>
    <string name="app_name">HomeCinema</string>
    <string name="loader_text">Please wait…</string>
    <!-- content descriptions -->
    <string name="video_thumbnail">Video thumbnail</string>
    <string name="toolbar">Home page toolbar</string>
    <string name="applicationtitle">HomeCinema</string>
    <string name="choosevideo">Choose a video</string>
    <string name="videolist">List of video files</string>
    <string name="settingstoolbar">Settings page toolbar</string>
    <string name="backbutton">Go back to home screen</string>
    <string name="bluetoothsettings">Bluetooth settings</string>
    <string name="viewsettings">View settings</string>
    <string name="help">help</string>
    <string name="camera">Video player</string>
    <string name="exit">Exit view</string>
    <string name="bluebooth">Turn on bluetooth</string>
    <string name="videoname">Video file name</string>
    <string name="viewheight">Video object height</string>
    <string name="viewwidth">Video object width</string>
    <string name="viewdescription">Type a preferred window size for the AR object that renders your videos into the camera view:</string>
    <string name="videolength">Video length</string>
    <string name="playpausebutton">Play and Pause button</string>
    <string name="bluetoothdescription">Use the toggle button if you`d like to use a bluetooth device for audio streaming</string>
    <!-- shared preference resources -->
    <string name="shared_preference_key">com.example.android.homecinema.sharedpreference</string>
    <string name="height_preference_key">com.example.android.homecinema.height</string>
    <string name="width_preference_key">com.example.android.homecinema.width</string>
    <string name="camerabar">Camera</string>
    <string name="toolbar_text">HomeCinema</string>
    <string name="Bluetooth_On">On |</string>
    <string name="Bluetooth_connected">Connected</string>
    <string name="Bluetooth_disconnected">Disconnected</string>
    <string name="settingsbar_text">Settings</string>
    <string name="Bluetooth_off">Off</string>
    <string name="splash_screen_name">Splash screen</string>
    <string name="settings">Settings</string>
    <string name="camera_text">Camera</string>
    <string name="close_me">Close Me</string>
    <string name="bluetooth_help">Tap to turn on Bluetooth</string>
    <string name="close_me">Close Me</string>
    <string name="about">This application was created as a school project.</string>
    <string name="about_help">The application can be used for playing a video file from your phone on the application\'s AR camera! To play a file, simply choose one from the scrollable list and the application will take care of the rest!</string>
    <string name="about_extra">Find more information at:</string>
    <string name="github_readme">https://github.com/daniel0707/Home-Cinema/blob/master/README.md</string>
    <string name="close_me">Close Me</string>
    <string name="user_request_width">Input a width</string>
    <string name="user_request_height">Input a height</string>
    <string name="current_object_size">*Current object size:</string>
    <string name="choose_a_video">Choose a video</string>
</resources>
