<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:background="@drawable/back"
    android:orientation="vertical">
    <!-- close popup-->
    <ImageView
        android:id="@+id/bluetooth_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="10dp"

        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/exit"
        android:src="@drawable/ic_outline_close_24px"
        android:text="Close Me" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:background="@drawable/back"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingTop="8dp"
            android:paddingRight="5dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Tap to turn on Bluetooth"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/switch_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:contentDescription="@string/bluebooth" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/bluetoothdescription"
            android:text="@string/bluetoothdescription"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>